--- a/ros-cslam/src/pose_graph_builder/CMakeLists.txt
+++ b/ros-cslam/src/pose_graph_builder/CMakeLists.txt
@@ -11,6 +11,8 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  tf2 
+  tf2_ros
 )
 
 ## System dependencies are found with CMake's conventions
