improvements, fake odometry added

--- a/acquisition_node/docker-compose-donald.yml
+++ b/acquisition_node/docker-compose-donald.yml
@@ -8,7 +8,10 @@ services:
         - ACQ_ROS_MASTER_URI_SERVER=ubuntu-Aleks.local
         - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.85
         - ACQ_DEVICE_NAME=donaldthegreat
-        - ACQ_SOCKET_PORT=44455
+        - ACQ_SOCKET_PORT=41455
         - ACQ_BEAUTIFY=0
+        - ACQ_UPDATE_RATE=30
+        - ACQ_TEST_STREAM=1
+        - ACQ_TOPIC_VELOCITY_TO_POSE=velocity_to_pose_node/pose
       network_mode: "host"
       restart: always
