--- a/acquisition_node/Dockerfile
+++ b/acquisition_node/Dockerfile
@@ -9,6 +9,7 @@ MAINTAINER Aleksandar Petrov <alpetrov@ethz.ch>
 # ACQ_ROS_MASTER_URI_SERVER_IP
 # ACQ_DEVICE_NAME # should match the topic, e.g. watchtower10
 
+
 # OPTIONALLY YOU CAN ALSO SPECIFY + DEFAULT VALUES
 ENV ACQ_ROS_MASTER_URI_DEVICE_PORT 11311
 ENV ACQ_ROS_MASTER_URI_SERVER_PORT 11311
@@ -17,8 +18,10 @@ ENV ACQ_SOCKET_HOST 127.0.0.1
 ENV ACQ_SOCKET_PORT 65432
 ENV ACQ_TOPIC_RAW camera_node/image/raw
 ENV ACQ_TOPIC_CAMERAINFO camera_node/camera_info
+ENV ACQ_TOPIC_VELOCITY_TO_POSE velocity_to_pose_node/pose
 ENV ACQ_TAG_SIZE 0.065
 ENV ACQ_POSES_TOPIC poses
+ENV ACQ_ODOMETRY_TOPIC odometry
 ENV ACQ_TEST_STREAM 1
 ENV ACQ_BEAUTIFY 1
 
@@ -38,6 +41,12 @@ RUN cd /acquisition_node/apriltag ; mkdir build ; cd build ; cmake .. -DCMAKE_BU
 ENV ACQ_APRILTAG_LIB /acquisition_node/apriltag/python
 ENV ACQ_APRILTAG_SO /acquisition_node/apriltag/build/lib
 
+# Setup the duckietown_msgs
+RUN mkdir -p /catkin-ws/src
+RUN /bin/bash -c "source /opt/ros/kinetic/setup.bash; cd /catkin-ws/; catkin_make"
+COPY duckietown_msgs /catkin-ws/src/duckietown_msgs
+RUN /bin/bash -c "source /catkin-ws/devel/setup.bash; cd /catkin-ws/; catkin_make"
+
 # Copy the Python files
 COPY deviceSideProcessor.py /acquisition_node
 COPY deviceSideSubscriber.py /acquisition_node
@@ -54,4 +63,4 @@ COPY wrapper.sh /acquisition_node
 RUN chmod +x /acquisition_node/*.sh
 
 # Start the processes
-CMD cd /acquisition_node ; /ros_entrypoint.sh /acquisition_node/wrapper.sh
+CMD /bin/bash -c "cd /acquisition_node; source /catkin-ws/devel/setup.bash; /acquisition_node/wrapper.sh"
