--- a/acquisition_node/docker-compose-wts.yml
+++ b/acquisition_node/docker-compose-wts.yml
@@ -9,7 +9,10 @@ services:
         - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.85
         - ACQ_DEVICE_NAME=watchtower05
         - ACQ_SOCKET_PORT=45405
-        - ACQ_BEAUTIFY 0
+        - ACQ_BEAUTIFY=0
+        - ACQ_UPDATE_RATE=30
+        - ACQ_TEST_STREAM=1
+        - ACQ_TOPIC_VELOCITY_TO_POSE=velocity_to_pose_node/pose
       network_mode: "host"
       restart: always
 
@@ -22,7 +25,10 @@ services:
         - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.85
         - ACQ_DEVICE_NAME=watchtower06
         - ACQ_SOCKET_PORT=45406
-        - ACQ_BEAUTIFY 0
+        - ACQ_BEAUTIFY=0
+        - ACQ_UPDATE_RATE=30
+        - ACQ_TEST_STREAM=1
+        - ACQ_TOPIC_VELOCITY_TO_POSE=velocity_to_pose_node/pose
       network_mode: "host"
       restart: always
 
@@ -35,45 +41,57 @@ services:
         - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.85
         - ACQ_DEVICE_NAME=watchtower09
         - ACQ_SOCKET_PORT=45409
-        - ACQ_BEAUTIFY 0
+        - ACQ_BEAUTIFY=0
+        - ACQ_UPDATE_RATE=30
+        - ACQ_TEST_STREAM=1
+        - ACQ_TOPIC_VELOCITY_TO_POSE=velocity_to_pose_node/pose
       network_mode: "host"
       restart: always
 
   acquisition_node_wt10:
-    image: aleksandarpetrov/duckietown-cslam-acquisition
-    environment:
-      - ACQ_ROS_MASTER_URI_DEVICE=watchtower10.local
-      - ACQ_ROS_MASTER_URI_DEVICE_IP=192.168.1.81
-      - ACQ_ROS_MASTER_URI_SERVER=ubuntu-Aleks.local
-      - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.85
-      - ACQ_DEVICE_NAME=watchtower10
-      - ACQ_SOCKET_PORT=45410
-      - ACQ_BEAUTIFY 0
+      image: aleksandarpetrov/duckietown-cslam-acquisition
+      environment:
+        - ACQ_ROS_MASTER_URI_DEVICE=watchtower10.local
+        - ACQ_ROS_MASTER_URI_DEVICE_IP=192.168.1.81
+        - ACQ_ROS_MASTER_URI_SERVER=ubuntu-Aleks.local
+        - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.85
+        - ACQ_DEVICE_NAME=watchtower10
+        - ACQ_SOCKET_PORT=45410
+        - ACQ_BEAUTIFY=0
+        - ACQ_UPDATE_RATE=30
+        - ACQ_TEST_STREAM=1
+        - ACQ_TOPIC_VELOCITY_TO_POSE=velocity_to_pose_node/pose
     network_mode: "host"
     restart: always
 
   acquisition_node_wt11:
-    image: aleksandarpetrov/duckietown-cslam-acquisition
-    environment:
-      - ACQ_ROS_MASTER_URI_DEVICE=watchtower11.local
-      - ACQ_ROS_MASTER_URI_DEVICE_IP=192.168.1.247
-      - ACQ_ROS_MASTER_URI_SERVER=ubuntu-Aleks.local
-      - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.85
-      - ACQ_DEVICE_NAME=watchtower11
-      - ACQ_SOCKET_PORT=45411
-      - ACQ_BEAUTIFY 0
-    network_mode: "host"
-    restart: always
+      image: aleksandarpetrov/duckietown-cslam-acquisition
+      environment:
+        - ACQ_ROS_MASTER_URI_DEVICE=watchtower11.local
+        - ACQ_ROS_MASTER_URI_DEVICE_IP=192.168.1.247
+        - ACQ_ROS_MASTER_URI_SERVER=ubuntu-Aleks.local
+        - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.85
+        - ACQ_DEVICE_NAME=watchtower11
+        - ACQ_SOCKET_PORT=45411
+        - ACQ_BEAUTIFY=0
+        - ACQ_UPDATE_RATE=30
+        - ACQ_TEST_STREAM=1
+        - ACQ_TOPIC_VELOCITY_TO_POSE=velocity_to_pose_node/pose
+      network_mode: "host"
+      restart: always
 
   acquisition_node_wt12:
-    image: aleksandarpetrov/duckietown-cslam-acquisition
-    environment:
-      - ACQ_ROS_MASTER_URI_DEVICE=watchtower12.local
-      - ACQ_ROS_MASTER_URI_DEVICE_IP=192.168.1.113
-      - ACQ_ROS_MASTER_URI_SERVER=ubuntu-Aleks.local
-      - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.85
-      - ACQ_DEVICE_NAME=watchtower12
-      - ACQ_SOCKET_PORT=45412
-      - ACQ_BEAUTIFY 0
-    network_mode: "host"
-    restart: always
+      image: aleksandarpetrov/duckietown-cslam-acquisition
+      environment:
+        - ACQ_ROS_MASTER_URI_DEVICE=watchtower12.local
+        - ACQ_ROS_MASTER_URI_DEVICE_IP=192.168.1.113
+        - ACQ_ROS_MASTER_URI_SERVER=ubuntu-Aleks.local
+        - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.85
+        - ACQ_DEVICE_NAME=watchtower12
+        - ACQ_SOCKET_PORT=45412
+        - ACQ_BEAUTIFY=0
+        - ACQ_UPDATE_RATE=30
+        - ACQ_TEST_STREAM=1
+        - ACQ_TOPIC_VELOCITY_TO_POSE=velocity_to_pose_node/pose
+      network_mode: "host"
+      restart: always
