--- a/acquisition_node/Dockerfile
+++ b/acquisition_node/Dockerfile
@@ -13,11 +13,13 @@ MAINTAINER Aleksandar Petrov <alpetrov@ethz.ch>
 # OPTIONALLY YOU CAN ALSO SPECIFY + DEFAULT VALUES
 ENV ACQ_ROS_MASTER_URI_DEVICE_PORT 11311
 ENV ACQ_ROS_MASTER_URI_SERVER_PORT 11311
-ENV ACQ_UPDATE_RATE 2
+ENV ACQ_POSES_UPDATE_RATE 10
+ENV ACQ_ODOMETRY_UPDATE_RATE 30
+ENV ACQ_STATIONARY_ODOMETRY 0
 ENV ACQ_SOCKET_HOST 127.0.0.1
 ENV ACQ_SOCKET_PORT 65432
 ENV ACQ_TOPIC_RAW camera_node/image/raw
-ENV ACQ_TOPIC_CAMERAINFO camera_node/camera_info
+# ENV ACQ_TOPIC_CAMERAINFO camera_node/camera_info
 ENV ACQ_TOPIC_VELOCITY_TO_POSE velocity_to_pose_node/pose
 ENV ACQ_TAG_SIZE 0.065
 ENV ACQ_POSES_TOPIC poses
