--- a/acquisition_node/docker-compose-donald.yml
+++ b/acquisition_node/docker-compose-donald.yml
@@ -8,10 +8,13 @@ services:
         - ACQ_ROS_MASTER_URI_SERVER=ubuntu-Aleks.local
         - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.103
         - ACQ_DEVICE_NAME=donaldthegreat
-        - ACQ_SOCKET_PORT=41455
+        - ACQ_SOCKET_PORT=40455
         - ACQ_BEAUTIFY=0
-        - ACQ_UPDATE_RATE=30
+        - ACQ_STATIONARY_ODOMETRY=0
+        - ACQ_ODOMETRY_UPDATE_RATE=1
+        - ACQ_POSES_UPDATE_RATE=10
         - ACQ_TEST_STREAM=1
         - ACQ_TOPIC_VELOCITY_TO_POSE=velocity_to_pose_node/pose
+        - ACQ_TOPIC_RAW=camera_node/image/compressed
       network_mode: "host"
       restart: always
