--- a/ros-cslam/Dockerfile-diagnostics
+++ b/ros-cslam/Dockerfile-diagnostics
@@ -16,7 +16,7 @@ RUN /bin/bash -c "source /opt/ros/kinetic/setup.bash; cd /catkin-ws/; catkin_mak
 COPY wrapper_diagnostics.sh /catkin-ws
 RUN chmod +x /catkin-ws/*.sh
 
-ENV DISPLAY :0
+ENV DISPLAY $DISPLAY
 ENV QT_X11_NO_MITSHM 1
 
 CMD /bin/bash -c "cd /catkin-ws; source /catkin-ws/devel/setup.bash; /catkin-ws/wrapper_diagnostics.sh"
