--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "ros-cslam/src/duckietown-visualization"]
 	path = ros-cslam/src/duckietown-visualization
-	url = git@github.com:duckietown/duckietown-visualization.git
+	url = https://github.com/duckietown/duckietown-visualization.git
