--- a/Dockerfile-graph-optimizer
+++ b/Dockerfile-graph-optimizer
@@ -2,18 +2,30 @@ FROM ros:kinetic-ros-core
 
 MAINTAINER Benson Kuan <kbenson@ethz.ch>
 
+ENV DISPLAY $DISPLAY
+ENV QT_X11_NO_MITSHM 1
+
 # Install rospy
 RUN apt-get update
 RUN apt-get install -y ros-kinetic-rospy ros-kinetic-tf2 ros-kinetic-tf ros-kinetic-tf-conversions
 RUN apt-get install -y qtbase5-dev qtdeclarative5-dev
 RUN apt-get install -y libeigen3-dev
 RUN apt-get install -y libsuitesparse-dev
-RUN apt-get install -y python-pip
-RUN pip install PyGeometry 
-RUN pip install scipy 
+RUN apt-get install -y python-pip python-numpy python-scipy 
 
+RUN pip install --upgrade pip
+RUN pip install PyGeometry 
+RUN pip install scipy
+
+
+
+# Set up prerequisites
+RUN git clone https://github.com/duckietown/duckietown-world.git /duckietown-world; cd /duckietown-world; pip install -r requirements.txt; python setup.py develop --no-deps
+
+## Pose graph optimizer
 ARG graph_lib_dir=lib-cslam
 ARG ros_nodes=ros-cslam/src/pose_graph_builder
+
 
 RUN mkdir -p /graph_optimizer/catkin_ws/src/pose_graph_builder
 
@@ -27,4 +39,10 @@ COPY ${ros_nodes} /graph_optimizer/catkin_ws/src/pose_graph_builder
 RUN /bin/bash -c "source /opt/ros/kinetic/setup.bash; cd /graph_optimizer/catkin_ws/; catkin_make"
 RUN chmod +x /graph_optimizer/catkin_ws/src/pose_graph_builder/*.sh
 
-CMD /bin/bash -c "cd /graph_optimizer/catkin_ws; source /graph_optimizer/catkin_ws/devel/setup.bash; /graph_optimizer/catkin_ws/src/pose_graph_builder/wrapper.sh"
+# Setup the ros-visualization
+COPY ros-cslam/src/cslam_visualization /graph_optimizer/catkin_ws/src/cslam_visualization
+COPY ros-cslam/src/duckietown-visualization/duckietown_visualization /graph_optimizer/catkin_ws/src/duckietown_visualization
+RUN /bin/bash -c "source /opt/ros/kinetic/setup.bash; cd /catkin_ws/; catkin_make"
+
+
+CMD /bin/bash -c "/graph_optimizer/catkin_ws/src/pose_graph_builder/wrapper.sh"
