fix container diagnostics

--- a/Dockerfile-diagnostics
+++ b/Dockerfile-diagnostics
@@ -8,11 +8,11 @@ RUN apt-get install -y ros-kinetic-rospy
 RUN apt-get install -y python-qt4
 
 # Setup the ros-cslam
-RUN mkdir -p /catkin-ws/src
-COPY ros-cslam/src/cslam_diagnostics /catkin-ws/src
-RUN /bin/bash -c "source /opt/ros/kinetic/setup.bash; cd /catkin-ws/; catkin_make"
-
+RUN mkdir -p /catkin_ws/src/cslam_diagnostics
+COPY ros-cslam/src/cslam_diagnostics /catkin_ws/src/cslam_diagnostics
+RUN /bin/bash -c "source /opt/ros/kinetic/setup.bash; cd /catkin_ws/; catkin_make"
+RUN chmod +x /catkin_ws/src/cslam_diagnostics/*.sh
 ENV DISPLAY $DISPLAY
 ENV QT_X11_NO_MITSHM 1
 
-CMD /bin/bash -c "cd /catkin-ws; source /catkin-ws/devel/setup.bash; /catkin-ws/src/cslam_diagnostics/wrapper_diagnostics.sh"
+CMD /bin/bash -c "cd /catkin_ws; source /catkin_ws/devel/setup.bash; /catkin_ws/src/cslam_diagnostics/wrapper_diagnostics.sh"
