--- a/Dockerfile-graph-optimizer
+++ b/Dockerfile-graph-optimizer
@@ -16,18 +16,18 @@ RUN apt-get install -y python-pip python-numpy python-scipy
 # RUN pip install --upgrade pip
 RUN pip install PyGeometry 
 
-## Pose graph optimizer
+# DO NOT PUT ANYTHING HERE BEFORE THE G2O BUILDING! IT TAKES AGES!
 ARG graph_lib_dir=lib-cslam
-ARG ros_nodes=ros-cslam/src/pose_graph_builder
-
-
-RUN mkdir -p /graph_optimizer/catkin_ws/src/pose_graph_builder
-
 COPY ${graph_lib_dir} /graph_optimizer/lib-cslam
 
 RUN cd /graph_optimizer/lib-cslam/src/g2opy ; mkdir build ; cd build ; cmake -DPYBIND11_PYTHON_VERSION=2.7 ..  ; make -j3; cd ..; python setup.py install
 RUN cd /graph_optimizer/lib-cslam; python setup.py develop --no-deps
 RUN apt-get install -y vim
+
+
+## Pose graph optimizer
+ARG ros_nodes=ros-cslam/src/pose_graph_builder
+RUN mkdir -p /graph_optimizer/catkin_ws/src/pose_graph_builder
 
 COPY ${ros_nodes} /graph_optimizer/catkin_ws/src/pose_graph_builder
 
