--- a/scripts/docker-compose-donald-x86.yml
+++ b/scripts/docker-compose-donald-x86.yml
@@ -1,14 +1,14 @@
 version: '3'
 services:
   acquisition_node_donald:
-      image: duckietown/cslam-acquisition:rpi
+      image: duckietown/cslam-acquisition:x86
       environment:
         - ACQ_ROS_MASTER_URI_DEVICE=donaldthegreat.local
-        - ACQ_ROS_MASTER_URI_DEVICE_IP=192.168.1.181
-        - ACQ_ROS_MASTER_URI_SERVER=Exia.local
-        - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.115
+        - ACQ_ROS_MASTER_URI_DEVICE_IP=192.168.1.180
+        - ACQ_ROS_MASTER_URI_SERVER=duckietown3.local
+        - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.17
         - ACQ_DEVICE_NAME=donaldthegreat
-        - ACQ_BEAUTIFY=0
+        - ACQ_BEAUTIFY=1
         - ACQ_STATIONARY_ODOMETRY=0
         - ACQ_ODOMETRY_UPDATE_RATE=15
         - ACQ_POSES_UPDATE_RATE=15
