--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,19 +58,19 @@ jobs:
           cd lib-cslam
           make -C notebooks || true
 
-#    - run:
-#        name: Coverage analysis
-#        when: always
-#        command: |
-#          cd lib-cslam
-#          make coverage-report
-
     - run:
-        name: Coveralls submission
+        name: Coverage analysis
         when: always
         command: |
           cd lib-cslam
-          make coverage-coveralls
+          make coverage-report
+
+#    - run:
+#        name: Coveralls submission
+#        when: always
+#        command: |
+#          cd lib-cslam
+#          make coverage-coveralls
 
     - run:
         name: Create JUnit output
