--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ workflows:
   test:
     jobs:
     - test-3.7
-    - test-2.7
+#    - test-2.7
 jobs:
   test-3.7: &test-template
     environment:
@@ -98,7 +98,7 @@ jobs:
         path: lib-cslam/notebooks
         destination: notebooks
 
-#  test-2.7:
-#    <<: *test-template
-#    docker:
-#    - image: python:2.7
+ test-2.7:
+   <<: *test-template
+   docker:
+   - image: python:2.7
