--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,10 +36,13 @@ jobs:
     - run:
         name: Install AprilTag library
         command: |
-          cd lib-cslam/src/apriltag
           mkdir /apriltag
           cp -r lib-cslam/src/apriltag /apriltag
-          cd /apriltag ; mkdir build ; cd build ; cmake .. -DCMAKE_BUILD_TYPE=Release ; make -j4
+          cd /apriltag
+          mkdir build
+          cd build
+          cmake .. -DCMAKE_BUILD_TYPE=Release
+          make -j4
           echo 'export ACQ_APRILTAG_LIB="/apriltag/python"' >> $BASH_ENV
           echo 'export ACQ_APRILTAG_SO="/apriltag/build/lib"' >> $BASH_ENV
 
