--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,10 +36,11 @@ jobs:
     - run:
         name: Install AprilTag library
         command: |
-          apt-get install cmake
+          apt-get install -y cmake
           mkdir /apriltag
           cp -r lib-cslam/src/apriltag /apriltag
           cd /apriltag
+          ls -al
           mkdir build
           cd build
           cmake .. -DCMAKE_BUILD_TYPE=Release
