--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
     - run:
         name: Install AprilTag library
         command: |
-          apt-get install cmake
+          apt-get install -y cmake
           mkdir /apriltag
           cp -r lib-cslam/src/apriltag /apriltag
           cd /apriltag
