corrections updated DISCUSSION_README

--- a/ros-cslam/src/pose_graph_builder/data/apriltagsDB.yaml
+++ b/ros-cslam/src/pose_graph_builder/data/apriltagsDB.yaml
@@ -530,7 +530,7 @@
   tag_type: TrafficSign
   street_name:
   vehicle_name: 
-  traffic_sign_type: 
+  traffic_sign_type: t-light-ahead
 
 - tag_id: 89
   tag_type: TrafficSign
