--- a/Dockerfile-acquisition-rpi
+++ b/Dockerfile-acquisition-rpi
@@ -43,7 +43,8 @@ RUN apt-get install -y ros-kinetic-rospy
 
 # Copy and install the April tag library and configure the environment variables for it
 RUN mkdir /acquisition_node/apriltag
-COPY ${apriltag_dir}/apriltags/libapriltag.so /acquisition_node/apriltag/libapriltag.so
+COPY ${apriltag_dir}/apriltags /acquisition_node/apriltag
+RUN  /bin/bash -c "cd /acquisition_node/apriltag; make"
 COPY ${apriltag_dir}/apriltags3.py /acquisition_node/apriltag/apriltags3.py
 ENV ACQ_APRILTAG_LIB /acquisition_node/apriltag/
 ENV ACQ_APRILTAG_SO /acquisition_node/apriltag/
