--- a/ros-cslam/src/pose_graph_builder/params/default_params.yaml
+++ b/ros-cslam/src/pose_graph_builder/params/default_params.yaml
@@ -13,4 +13,4 @@ minimum_edge_number_for_optimization : 100
 rejection_sampling_int : 20
 max_number_same_edge : 50
 using_priors : True
-result_folder : /home/amaury/duckietown/experiment_results
+result_folder : "/graph_optimizer/catkin_ws/data"
