--- a/ros-cslam/src/pose_graph_builder/params/default_params.yaml
+++ b/ros-cslam/src/pose_graph_builder/params/default_params.yaml
@@ -1,6 +1,6 @@
  
 # G2O PARAMS
-optim_verbose : True
+optim_verbose : False
 online_optimization : False
 maximum_g2o_iterations : 20
 save_g2o_output : False
