fix rotation bug, it is kinda working

--- a/scripts/apriltagsDB_custom.yaml
+++ b/scripts/apriltagsDB_custom.yaml
@@ -4,9 +4,9 @@
   vehicle_name: if
   traffic_sign_type: 
 
-- tag_id: 407
+- tag_id: 410
   tag_type: Vehicle
   street_name:
-  vehicle_name: DonaldTheGreat
+  vehicle_name: amauryduckiebot
   traffic_sign_type: 
 
