--- a/Dockerfile-graph-optimizer
+++ b/Dockerfile-graph-optimizer
@@ -11,11 +11,11 @@ RUN apt-get install -y ros-kinetic-rospy ros-kinetic-tf2 ros-kinetic-tf ros-kine
 RUN apt-get install -y qtbase5-dev qtdeclarative5-dev
 RUN apt-get install -y libeigen3-dev
 RUN apt-get install -y libsuitesparse-dev
-RUN apt-get install -y python-pip python-numpy python-scipy 
+RUN apt-get install -y python-pip python-numpy python-scipy
 RUN apt-get install -y vim
 
 # RUN pip install --upgrade pip
-RUN pip install PyGeometry 
+RUN pip install PyGeometry
 
 # DO NOT PUT ANYTHING HERE BEFORE THE G2O BUILDING! IT TAKES AGES!
 ARG g2o_lib_dir=lib-cslam/src/g2opy
@@ -33,6 +33,9 @@ RUN cd /graph_optimizer/lib-cslam; python setup.py develop --no-deps
 ARG ros_nodes=ros-cslam/src/pose_graph_builder
 RUN mkdir -p /graph_optimizer/catkin_ws/src/pose_graph_builder
 COPY ${ros_nodes} /graph_optimizer/catkin_ws/src/pose_graph_builder
+
+# Add the some Duckietown messages (needed for the custom AprilTagDetection message)
+COPY ros-cslam/src/duckietown_msgs /graph_optimizer/catkin_ws/src/duckietown_msgs
 
 # Setup the ros-visualization
 COPY ros-cslam/src/cslam_visualization /graph_optimizer/catkin_ws/src/cslam_visualization
