--- a/scripts/docker-compose-postprocessingtest.yml
+++ b/scripts/docker-compose-postprocessingtest.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
-  acquisition_node_watchtower09_bag:
-      image: duckietown/cslam-acquisition:x86-post
+  acquisition_node_autobot04_bag:
+      image: duckietown/cslam-acquisition:x86-doubletrouble
       volumes:
         - /FILES/Documents/ETH_Zurich/Duckietown/SLAM/bags/19-04-18-experiment/:/bags
       environment:
@@ -11,12 +11,12 @@ services:
         - ACQ_OBSERVATIONS_STATISTICS_OUTPUT=/bags/statistics.yaml
         - ACQ_DEVICE_MODE=postprocessing
         - ACQ_DEVICE_THREADS=4
-        - ACQ_DEVICE_BAG=/bags/watchtower09_2019-04-18-12-27-26.bag
+        - ACQ_DEVICE_BAG=/bags/autobot04_2019-04-18-12-27-21.bag
         - ACQ_SERVER_MODE=postprocessing
         - ACQ_OUTPUT_BAG=/bags/processed.bag
         # - ACQ_ROS_MASTER_URI_SERVER=ubuntu-Aleks.local
         # - ACQ_ROS_MASTER_URI_SERVER_IP=192.168.1.104
-        - ACQ_DEVICE_NAME=watchtower09
+        - ACQ_DEVICE_NAME=autobot04
         - ACQ_BEAUTIFY=0
         # - ACQ_STATIONARY_ODOMETRY=1
         # - ACQ_ODOMETRY_UPDATE_RATE=0
@@ -24,5 +24,7 @@ services:
         - ACQ_TEST_STREAM=1
         # - ACQ_TOPIC_VELOCITY_TO_POSE=velocity_to_pose_node/pose
         - ACQ_TOPIC_RAW=camera_node/image/compressed
+        - ACQ_ODOMETRY_POST_VISUAL_ODOMETRY=1
+        - ACQ_ODOMETRY_POST_VISUAL_ODOMETRY_FEATURES=SURF
       network_mode: "host"
       # restart: always
