--- a/ros-cslam/src/pose_graph_builder/data/priors.yaml
+++ b/ros-cslam/src/pose_graph_builder/data/priors.yaml
@@ -15,32 +15,18 @@ onthefloor:
     qz: False
 
 
-straightgoing: 
-  from_type: duckiebot
-  to_type: duckiebot
-  standard_space_deviation: 0.05
-  standard_angle_deviation: 1
-  position: [0.0, 0.0, 0.0]
-  rotation: [0.0, 0.0, 0.0]
-  constraints:
-    x: False
-    y: False
-    z: False
-    qx: True
-    qy: True
-    qz: True
+# straightgoing: 
+#   from_type: duckiebot
+#   to_type: duckiebot
+#   standard_space_deviation: 0.0000001
+#   standard_angle_deviation: 0.0000001
+#   position: [0.0, 0.0, 0.0]
+#   rotation: [0.0, 0.0, 0.0]
+#   constraints:
+#     x: False
+#     y: True
+#     z: False
+#     qx: True
+#     qy: True
+#     qz: True
 
-old: 
-  from_type: origin
-  to_type: watchtower
-  position: [0.0, 0.0, 0.0]
-  rotation: [0.0, 0.0, 0.0]
-  standard_space_deviation: 0.01
-  standard_angle_deviation: 5
-  constraints:
-    x: False
-    y: False
-    z: False
-    qx: False
-    qy: False
-    qz: False
