--- a/ros-cslam/src/pose_graph_builder/params/default_params.yaml
+++ b/ros-cslam/src/pose_graph_builder/params/default_params.yaml
@@ -2,14 +2,16 @@
 # G2O PARAMS
 optim_verbose : False
 online_optimization : False # Leave to false, with True doesn't work 
-maximum_g2o_iterations : 30
+maximum_g2o_iterations : 40
 save_g2o_output : False
 
+# RESAMPLER PARAMS
+resampling_frequency : 10.0
 
 # DUCKIETOWN_GRAPH PARAMS
 stocking_time : 300
 optimization_frequency : 0.1
-minimum_edge_number_for_optimization : 100
+minimum_edge_number_for_optimization : 200
 rejection_sampling_int : 20
 max_number_same_edge : 50
 using_priors : True
