--- a/04-Apriltag-processing/docker-compose.yaml
+++ b/04-Apriltag-processing/docker-compose.yaml
@@ -1,13 +1,7 @@
 version: '3'
 services:
     apriltag-processor:
-        build:
-            context: .
+        image: duckietown/apriltag-processor:master19
         network_mode: "host"
         environment:
-            ACQ_ROS_MASTER_URI_DEVICE: watchtower10
-            ACQ_ROS_MASTER_URI_DEVICE_IP: 172.31.168.69
-            ACQ_ROS_MASTER_URI_SERVER: duckietown3
-            ACQ_ROS_MASTER_URI_SERVER_IP: 172.31.168.115
             ACQ_DEVICE_NAME: watchtower10
-
