--- a/04-Apriltag-processing/docker-compose.yaml
+++ b/04-Apriltag-processing/docker-compose.yaml
@@ -4,6 +4,6 @@ services:
         image: duckietown/apriltag-processor:master19
         network_mode: "host"
         environment:
-            ROS_MASTER_URI: http://duckietown3.local:11311
+            ROS_MASTER_URI: http://172.31.168.115:11311
             ACQ_DEVICE_NAME: watchtower10
 
