--- a/01-graph-optimizer/docker-compose.yaml
+++ b/01-graph-optimizer/docker-compose.yaml
@@ -7,8 +7,9 @@ services:
         environment:
             ATMSGS_BAG: /data/processed.bag
             OUTPUT_DIR: /challenges/challenge-evaluation-output
-            ROS_MASTER: duckietown3
-            ROS_MASTER_IP: 172.31.168.115
+            ROS_HOSTNAME: 172.31.168.115
+            ROS_IP: 172.31.168.115
+            ROS_MASTER : duckietown3
         volumes:
             - ${PWD}/scripts/apriltagsDB_custom.yaml:/graph_optimizer/catkin_ws/src/pose_graph_builder/data/apriltagsDB_custom.yaml
             - /home/amaury/Desktop:/data
