--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,12 @@
-ros-cslam/build/
-ros-cslam/devel/
-ros-cslam/.catkin_workspace
-!/*.pyc
-ros-cslam/install/
 *.pyc
-lib-cslam/src/duckietown_cslam.egg-info/
 .vscode/
 .idea
-ros-cslam/src/CMakeLists.txt
-lib-cslam/out-comptests
-
 dts
 scripts/docker-compose-amauryduckiebot-x86.yml
 */ros/devel
 */ros/build
 */ros/install
-*/.catkin_workspace
-01-graph-optimizer/ros/.catkin_workspace
-01-graph-optimizer/ros/src/CMakeLists.txt
+*/ros/logs
+*/ros/.catkin_tools
+*/ros/.catkin_workspace
+*/ros/src/CMakeLists.txt
